tests/baselines/reference/slashBeforeVariableDeclaration1.errors.txt
slashBeforeVariableDeclaration1.ts(1,1): error TS1127: Invalid character.


==== slashBeforeVariableDeclaration1.ts (1 errors) ====
    \ declare var v;
    
!!! error TS1127: Invalid character.